--- a/package.json
+++ b/package.json
@@ -3,40 +3,48 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+    "prestart": "node env-inject.js",
     "start": "ng serve",
+    "tsc": "tsc",
+    "link": "npm link @ng-vagabond-lab/ng-dsv && npm start",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr:blog-angular-ui": "node dist/blog-angular-ui/server/server.mjs"
+    "test": "ng test --browsers=Chrome",
+    "serve:ssr:blog-angular-ui": "node dist/blog-angular-ui/server/server.mjs",
+    "test:coverage": "ng test --no-watch --code-coverage --browsers=Chrome",
+    "test:coverage:headless": "ng test --no-watch --code-coverage --browsers=CustomChromeHeadless",
+    "sonar": "npm run test:coverage:headless && npx sonar-scanner -Dsonar.login=$SONAR_TOKEN -Dsonar.host.url=http://localhost:9000"
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^20.0.0",
-    "@angular/compiler": "^20.0.0",
-    "@angular/core": "^20.0.0",
-    "@angular/forms": "^20.0.0",
-    "@angular/platform-browser": "^20.0.0",
-    "@angular/platform-server": "^20.0.0",
-    "@angular/router": "^20.0.0",
-    "@angular/ssr": "^20.0.0",
+    "@angular/common": "^20.1.4",
+    "@angular/core": "^20.1.4",
+    "@angular/forms": "^20.1.4",
+    "@angular/platform-browser": "^20.1.4",
+    "@angular/platform-server": "^20.1.4",
+    "@angular/router": "^20.1.4",
+    "@angular/ssr": "^20.1.4",
+    "@ngx-translate/core": "^17.0.0",
     "express": "^5.1.0",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.15.0"
+    "remixicon": "^4.6.0",
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
-    "@angular/build": "^20.0.0",
-    "@angular/cli": "^20.0.0",
-    "@angular/compiler-cli": "^20.0.0",
-    "@types/express": "^5.0.1",
-    "@types/jasmine": "~5.1.0",
-    "@types/node": "^20.17.19",
-    "jasmine-core": "~5.7.0",
-    "karma": "~6.4.0",
+    "@angular/build": "^20.1.4",
+    "@angular/cli": "^20.1.4",
+    "@ng-vagabond-lab/ng-dsv": "^0.0.167",
+    "@types/express": "^5.0.3",
+    "@types/jasmine": "~5.1.8",
+    "dotenv": "^17.2.1",
+    "jasmine-core": "~5.9.0",
+    "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
+    "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.8.2"
+    "rxjs": "~7.8.2",
+    "prettier": "^3.6.2",
+    "sonar-scanner": "^3.1.0",
+    "typescript": "~5.8.3"
   }
 }
